--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^12.6.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
     "swiper": "^12.0.3"
@@ -29,7 +30,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "react-router": "^7.10.1",
+    "react-router": "^7.11.0",
     "tailwindcss": "^4.1.17",
     "vite": "^7.2.4"
   }
